fixed card gaps, footer, nav drop-down

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,7 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.cardRow {
+    margin-left: 30px;
+   
+}
